--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -11,9 +11,8 @@
     "composite": true,
     "noEmit": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
-
+    "moduleResolution": "node",
     "module": "ESNext",
-    "moduleResolution": "Bundler",
     "types": ["node"]
   }
 }
